# MealPrep_ML

./: .Rhistory  .gitignore  CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.Rmd  README.md  pyproject.toml
.github/workflows/: build.yml  build_windows.yml  release.yml
docs/: Makefile  conf.py  make.bat  usage.rst
docs/_build/doctrees/: contributing.doctree  contributors.doctree  environment.pickle  index.doctree  installation.doctree  readme.doctree  usage.doctree
docs/_build/doctrees/source/: mealprep.doctree  modules.doctree
docs/_build/html/: .buildinfo  contributing.html  contributors.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: index.rst.txt  installation.rst.txt
docs/_build/html/_sources/source/: modules.rst.txt
docs/_build/html/source/: mealprep.html  modules.html
docs/source/: mealprep.rst
mealprep/: __init__.py  find_num_categ.py  make_recipe.py  mealprep.py  missing_ingredients.py
mealprep.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_find_bad_apples.py  test_find_fruits_veg.py  test_find_missing_ingredients.py  test_make_recipe.py  test_mealprep.py  test_rotten_apple.py
