[tool.poetry]
name = "mealprep"
version = "0.1.0"
description = "Python package that ease the pain in fpre-processing like outlier finding, numerical/categorical data and etc."
authors = ["luhuayue <luhuayueapp@163.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
