[tool.poetry]
name = "mealprep"
version = "0.1.0"
description = "Python package that ease the pain in fpre-processing like outlier finding, numerical/categorical data and etc."
authors = ["luhuayue <luhuayueapp@163.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
vega_datasets = "^0.8.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
